--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const year = date.getFullYear();
 
 <BaseLayout title="The Kolenkos" description="Taylor and Josh's wedding">
   <ImageBackground />
-  <div class="px-5 py-16 min-h-screen flex flex-col items-center text-center text-white">
+  <div class="px-5 py-20 min-h-dvh flex flex-col items-center text-center text-white">
     <h1 class="text-5xl md:text-[5rem] mt-auto md:mt-84 mb-4 font-heading tracking-tight">
       Joshua & Taylor
     </h1>
