--- a/src/components/ImageBackground.astro
+++ b/src/components/ImageBackground.astro
@@ -3,13 +3,17 @@ import { Image } from 'astro:assets';
 import background from '../images/background.jpg';
 ---
 
-<div class="absolute inset-0 object-cover w-full min-h-screen h-full -z-10">
+<div
+  class="relative flex items-end md:items-center inset-0 max-h-[900px] md:max-h-[1300px] overflow-hidden"
+>
   <Image
     src={background}
     alt="Joshua and Taylor Kolenkos"
-    class="object-cover w-full h-full"
+    class="object-cover w-full h-full min-h-[1000px] md:min-h-[1200px]"
     loading="eager"
     priority={true}
   />
-  <div class="absolute inset-0 bg-black/30"></div>
+  <div class="absolute inset-0">
+    <slot />
+  </div>
 </div>
