fix: image size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const images = [engagement1, engagement2, engagement3, engagement4];
   <div class="flex flex-col items-center relative pt-30 md:pt-44 pb-12 px-12 text-center">
     <div class="absolute left-1/2 -translate-1/2 w-[210px] md:w-[320px] top-0"><Champagne /></div>
     <h2 class="font-heading text-3xl md:text-5xl mb-6 md:mb-10">We're getting married!</h2>
-    <div class="mx-auto max-w-[36ch] md:max-w-[60ch] -top-9 mb-12 md:mb-16">
+    <div class="mx-auto max-w-[36ch] md:max-w-[60ch] -top-9 mb-12 md:mb-18">
       <p class="md:text-xl leading-6 tracking-tight">
         After 8 wonderful years, we got engaged on <strong>December 28, 2024</strong>. Just a few
         days after our favorite holiday and in front of loved ones, we (<span class="italic"
@@ -50,7 +50,7 @@ const images = [engagement1, engagement2, engagement3, engagement4];
         Next stop: <strong>Husband and Wife</strong>
       </p>
     </div>
-    <div class="flex flex-col md:flex-row md:max-w-6xl">
+    <div class="flex flex-col md:flex-row md:max-w-[1600px]">
       {
         images.map(image => {
           return (
