feat: password screen & rsvp functionality

--- a/src/components/ImageBackground.astro
+++ b/src/components/ImageBackground.astro
@@ -4,13 +4,14 @@ import background from '../images/background.jpg';
 ---
 
 <div
-  class="relative flex items-end md:items-center inset-0 max-h-[900px] md:max-h-[1300px] overflow-hidden"
+  class="relative flex items-end md:items-center inset-0 max-h-[700px] md:max-h-[950px] overflow-hidden"
 >
   <Image
     src={background}
     alt="Joshua and Taylor Kolenkos"
     class="object-cover w-full h-full min-h-[800px] md:min-h-[1200px]"
     loading="eager"
+    quality={100}
     priority={true}
   />
   <div class="absolute inset-0">
