--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,9 @@
 // Supports weights 400-900
 import '@fontsource-variable/playfair';
 import '@fontsource/playball';
+import '@phosphor-icons/web/light';
+import '@phosphor-icons/web/bold';
+import '@phosphor-icons/web/fill';
 
 import '../styles/global.css';
 
@@ -20,7 +23,9 @@ const { title, description } = Astro.props;
     <title>{title}</title>
     <link rel="preload" as="font" type="font/woff2" href={playballWoff2} crossorigin="anonymous" />
   </head>
-  <body>
-    <slot />
+  <body class="bg-base-200">
+    <div class="pb-12">
+      <slot />
+    </div>
   </body>
 </html>
