--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,7 @@
 @import 'tailwindcss';
+@plugin 'daisyui' {
+  themes: bumblebee --default;
+}
 
 @theme {
   --font-body: 'Playfair Variable', serif;
@@ -8,6 +11,7 @@
 body {
   font-family: var(--font-body);
   margin: 0;
+  min-height: 100dvh;
 }
 
 * {
