feat: rsvp styles & functionality

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,7 +23,7 @@ const { title, description } = Astro.props;
     <title>{title}</title>
     <link rel="preload" as="font" type="font/woff2" href={playballWoff2} crossorigin="anonymous" />
   </head>
-  <body class="bg-base-200">
+  <body>
     <div class="pb-12">
       <slot />
     </div>
