--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const images = [engagement1, engagement2, engagement3, engagement4];
         {month < 10 ? '0' + month : month} . {day} . {year}
       </p>
       <h1 class="text-5xl md:text-7xl font-heading mb-14 text-base-content">Taylor & Joshua</h1>
-      <a href="/rsvp" class="btn btn-neutral btn-lg mb-auto"> RSVP </a>
+      <a href="/rsvp" class="btn btn-neutral btn-lg btn-wide mb-auto"> RSVP </a>
       <Countdown client:only date={date} />
     </div>
   </ImageBackground>
