--- a/src/components/Dock.astro
+++ b/src/components/Dock.astro
@@ -7,13 +7,13 @@ const pages = [
 ];
 ---
 
-<div class="dock md:dock-xl bg-neutral text-neutral-content">
+<div class="dock md:dock-xl">
   {
     pages.map(page => {
       return (
         <a href={page.href} class={`dock-item ${active === page.name ? 'dock-active' : ''}`}>
           <i class={`ph-fill ${page.icon}`} />
-          <span class="dock-label">{page.name}</span>
+          <span class="dock-label font-bold">{page.name}</span>
         </a>
       );
     })
