feat: update theme and add homepage

--- a/src/components/astro/Dock.astro
+++ b/src/components/astro/Dock.astro
@@ -7,7 +7,7 @@ const pages = [
 ];
 ---
 
-<div class="dock md:dock-xl">
+<div class="dock md:dock-lg z-20">
   {
     pages.map(page => {
       return (
