--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,65 +1,67 @@
 ---
-import { Image } from 'astro:assets';
-import BaseLayout from '../layouts/BaseLayout.astro';
-import Countdown from '../components/Countdown';
-import ImageBackground from '../components/ImageBackground.astro';
-import Champagne from '../svg/champagne.svg';
-
-import engagement1 from '../images/engagement-1.jpg';
-import engagement2 from '../images/engagement-2.jpg';
-import engagement3 from '../images/engagement-3.jpg';
-import engagement4 from '../images/engagement-4.jpg';
-import Dock from '@/components/Dock.astro';
-
-const date = new Date('2026-09-17T16:00:00Z');
-const month = date.getMonth() + 1;
-const day = date.getDate();
-const year = date.getFullYear();
-
-const images = [engagement1, engagement2, engagement3, engagement4];
+import BaseLayout from '@/layouts/BaseLayout.astro';
+import EngagementImages from '@/components/astro/EngagementImages.astro';
+import Mountain from '@/svg/mountain.svg';
+import Hills from '@/svg/hills.svg';
+import Vine from '@/svg/vine.svg';
+import Nav from '../components/astro/Nav.astro';
 ---
 
 <BaseLayout title="The Kolenkos" description="Taylor and Josh's wedding">
-  <ImageBackground>
-    <div class="px-5 pt-40 md:pt-60 pb-20 md:pb-30 flex flex-col items-center text-center h-full">
-      <p class="font-body text-3xl md:text-4xl tracking-widest mb-4 md:mb-6">
-        {month < 10 ? '0' + month : month} . {day} . {year}
-      </p>
-      <h1 class="text-5xl md:text-7xl font-heading mb-14 text-base-content">Taylor & Joshua</h1>
-      <a href="/rsvp" class="btn btn-neutral btn-lg btn-wide mb-auto"> RSVP </a>
-      <Countdown client:only date={date} />
-    </div>
-  </ImageBackground>
-  <div class="flex flex-col items-center relative pt-30 md:pt-44 pb-24 px-8 text-center">
-    <div class="absolute left-1/2 -translate-1/2 w-[210px] md:w-[320px] top-0"><Champagne /></div>
-    <h2 class="font-heading text-3xl md:text-5xl mb-6 md:mb-10">We're getting married!</h2>
-    <div class="mx-auto max-w-[36ch] md:max-w-[60ch] -top-9 mb-12 md:mb-18">
-      <p class="md:text-xl leading-6 tracking-tight">
-        After 8 wonderful years, we got engaged on <strong>December 28, 2024</strong>. Just a few
-        days after our favorite holiday and in front of loved ones, we (<span class="italic"
-          >finally</span
-        >) became Fiancé and Fianceé.
-      </p>
-      <p class="mt-4 md:mt-8 tracking-tight text-xl md:text-2xl leading-5">
-        Next stop: <strong>Husband and Wife</strong>
+  <Nav />
+  <main>
+    <div class="bg-base-content pt-18 md:pt-48 px-8 pb-20">
+      <h1 class="visually-hidden">The Kolenkos</h1>
+      <p
+        class="font-serif text-center text-base-200 text-[clamp(1.75rem,4vw,3rem)] leading-[1.3em] tracking-tight md:max-w-full mx-auto"
+      >
+        You're invited to celebrate the wedding of <span class="lg:block">
+          Taylor Diaz & Joshua Kolenko on September 17, 2026
+        </span> at <span class="underline underline-offset-6 decoration-3"
+          >Lakeside Gardens in Portland, Oregon.</span
+        >
       </p>
     </div>
-    <div class="flex flex-col md:flex-row md:max-w-[1600px]">
-      {
-        images.map(image => {
-          return (
-            <div class="w-full">
-              <Image
-                src={image}
-                class="w-full"
-                alt="Taylor and Joshua Kolenko Engagement Picture"
-                quality={100}
-              />
-            </div>
-          );
-        })
-      }
+    <div
+      class="bg-base-content relative w-full h-32 lg:h-auto overflow-hidden lg:overflow-visible -mt-[1px]"
+    >
+      <Mountain
+        class="min-w-5xl w-full absolute lg:relative left-1/2 lg:left-0 -translate-x-1/2 lg:translate-0 fill-base-200 top-[1px]"
+      />
     </div>
-  </div>
-  <Dock active="Home" />
+    <div class="pt-15 px-8 pb-20 bg-base-200 relative z-10 text-center">
+      <h2 class="font-serif text-4xl sm:text-5xl md:text-6xl mb-20 md:mb-28">The engagement</h2>
+      <EngagementImages />
+      <div
+        class="grid gap-8 md:gap-4 grid-cols-1 md:grid-cols-[1fr_auto_1fr] items-center justify-items-center mt-46 max-w-7xl mx-auto"
+      >
+        <div class="flex flex-col gap-8">
+          <h3 class="font-sans font-black tracking-widest text-xl uppercase">When</h3>
+          <p class="font-serif text-4xl lg:text-5xl leading-12 lg:leading-16">
+            Thursday <br /> September 17, 2026 <br /> 4:00pm
+          </p>
+        </div>
+        <div class="relative w-20 md:w-14 lg:w-16 md:top-8 rotate-90 md:rotate-0">
+          <Vine />
+        </div>
+        <div class="flex flex-col gap-8">
+          <h3 class="font-sans font-black tracking-widest text-xl uppercase">Where</h3>
+          <p class="font-serif text-4xl lg:text-5xl leading-12 lg:leading-16">
+            Lakeside Gardens <br /> 16211 SE Foster Rd <br /> Portland, OR 97236
+          </p>
+        </div>
+      </div>
+    </div>
+    <div
+      class="bg-base-200 relative w-full h-24 lg:h-auto overflow-hidden lg:overflow-visible -mt-[1px]"
+    >
+      <Hills
+        class="min-w-5xl w-full absolute lg:relative left-1/2 lg:left-0 -translate-x-1/2 lg:translate-0 fill-primary top-[1px]"
+      />
+    </div>
+    <div class="bg-primary pt-10 px-20 pb-30 flex flex-col">
+      <h2 class="text-center text-4xl text-balance mb-8">We'd love if you could join us.</h2>
+      <a class="btn btn-neutral w-full md:max-w-80 mx-auto" href="/rsvp">RSVP</a>
+    </div>
+  </main>
 </BaseLayout>
