--- a/src/pages/rsvp.astro
+++ b/src/pages/rsvp.astro
@@ -10,7 +10,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
     <div class="px-8 pt-20 pb-16 md:pt-32 lg:pt-40 md:max-w-5xl mx-auto">
       <div class="grid grid-cols-1 md:grid-cols-2 md:gap-16 lg:gap-30 justify-center">
         <div>
-          <h1 class="text-6xl mb-3 font-display">RSVP</h1>
+          <h1 class="text-6xl mb-3">RSVP</h1>
           <p>verb / <strong>ahr - es - vee - pee</strong></p>
           <p class="mt-4 mb-6">
             Abbreviation for the French saying "Répondez s'il vous plaît", which translates to:
