--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,9 +67,9 @@
   h4,
   h5,
   h6 {
-    font-family: var(--font-display);
-    font-weight: 700;
-    letter-spacing: -0.025em;
+    font-family: var(--font-serif);
+    font-weight: 500;
+    /* letter-spacing: -0.0125em; */
     color: var(--color-base-content);
   }
 
