--- a/src/pages/code.astro
+++ b/src/pages/code.astro
@@ -5,11 +5,11 @@ import BaseLayout from '@/layouts/BaseLayout.astro';
 
 <BaseLayout title="RSVP" description="Taylor and Josh's wedding RSVP page">
   <main>
-    <div class="px-8 pt-10 pb-10 items-center text-center">
+    <div class="px-8 pt-20 pb-10 items-center text-center">
       <div class="w-full max-w-md mx-auto">
-        <h1 class="text-2xl mb-20">The Kolenkos</h1>
-        <h2 class="text-3xl mb-6">What's the password?</h2>
-        <p class="mb-16 mx-auto text-balance">
+        <h1 class="text-2xl sm:text-3xl mb-20">The Kolenkos</h1>
+        <h2 class="text-3xl sm:text-4xl mb-6 leading-8">What's the password?</h2>
+        <p class="mb-12 mx-auto text-balance">
           Enter the access code provided to you by Taylor and Josh to access the wedding website.
         </p>
         <CodeForm client:load />
