--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import Vine from '@/svg/vine.svg';
 import Nav from '../components/astro/Nav.astro';
 ---
 
-<BaseLayout title="The Kolenkos" description="Taylor and Josh's wedding">
+<BaseLayout
+  title="The Kolenkos"
+  description="Taylor and Josh's wedding"
+  bodyClass="bg-base-content"
+>
   <Nav />
   <main>
     <div class="bg-base-content pt-18 md:pt-48 px-8 pb-20">
