--- a/src/pages/rsvp.astro
+++ b/src/pages/rsvp.astro
@@ -6,7 +6,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 <BaseLayout title="RSVP" description="Taylor and Josh's wedding RSVP page" navIsLight={true}>
   <Nav isLight={true} />
-  <main>
+  <main class="bg-base-200 min-h-[calc(100dvh-6rem)]">
     <div class="px-8 pt-16 pb-16 md:pt-20 lg:pt-24 md:max-w-5xl mx-auto">
       <div class="grid grid-cols-1 md:grid-cols-2 md:gap-16 lg:gap-30 justify-center">
         <div>
