--- a/src/components/astro/Nav.astro
+++ b/src/components/astro/Nav.astro
@@ -14,7 +14,7 @@ const { isLight } = Astro.props;
 
 <nav
   class={clsx(
-    'px-8 -mb-[1px] h-18 md:h-24 flex items-center justify-between',
+    'px-8 -mb-[1px] h-24 flex items-center justify-between',
     isLight ? 'text-base-content bg-base-200' : 'text-base-200 bg-base-content'
   )}
 >
