--- a/src/components/astro/EngagementImages.astro
+++ b/src/components/astro/EngagementImages.astro
@@ -1,43 +1,43 @@
 ---
-import clsx from 'clsx';
+import clsx from "clsx";
 
 const images: {
   classes: string;
 }[] = [
   {
-    classes: 'top-0 left-1/2 -translate-x-1/2 w-[60%] md:w-[29%]',
+    classes: "top-0 left-1/2 -translate-x-1/2 w-[70%] md:w-[29%]",
   },
   {
-    classes: 'top-[23%] md:top-[14%] left-[52%] md:left-[6%] w-[35%] md:w-[20%]',
+    classes: "top-[23%] md:top-[14%] left-[52%] md:left-[6%] w-[45%] md:w-[20%]",
   },
   {
-    classes: 'top-[42%] md:top-[40%] left-[16%] md:left-[4%] w-[54%] md:w-[36%]',
+    classes: "top-[42%] md:top-[40%] left-[16%] md:left-[4%] w-[65%] md:w-[36%]",
   },
   {
-    classes: 'top-[58%] md:top-[35%] left-[6%] md:left-[56%] w-[34%]',
+    classes: "top-[58%] md:top-[35%] left-[6%] md:left-[56%] w-[38%]",
   },
   {
-    classes: 'top-[31%] md:top-[18%] left-[8.5%] md:left-[78%] w-[30%] md:w-[14%]',
+    classes: "top-[31%] md:top-[18%] left-[8%] md:left-[78%] w-[28%] md:w-[14%]",
   },
   {
-    classes: 'bottom-0 top-[70%] md:top-[unset] left-[10%] md:left-[64%] w-[34%] md:w-[24%]',
+    classes: "bottom-0 top-[70%] md:top-[unset] left-[4%] md:left-[64%] w-[42%] md:w-[24%]",
   },
   {
-    classes: 'top-[61%] md:top-[57%] left-[56%] md:left-[58%] w-[34%] md:w-[22%]',
+    classes: "top-[59%] md:top-[57%] left-[56%] md:left-[58%] w-[42%] md:w-[22%]",
   },
   {
-    classes: 'bottom-0 md:bottom-[4%] left-1/2 md:left-[30%] -translate-x-1/2 w-[63%] md:w-[33%]',
+    classes: "bottom-0 md:bottom-[4%] left-1/2 md:left-[30%] -translate-x-1/2 w-[63%] md:w-[33%]",
   },
 ];
 
-const breakpoint = '769px';
+const breakpoint = "769px";
 ---
 
-<div class="relative h-[440vw] md:h-[160vw] md:max-h-[1840px] max-w-6xl mx-auto">
+<div class="relative h-[440vw] md:h-[160vw] md:max-h-[4000px] max-w-[2400px] mx-auto">
   {
     images.map(({ classes }, i) => {
       return (
-        <picture class={clsx('absolute', classes)}>
+        <picture class={clsx("absolute", classes)}>
           <source
             media={`(min-width: ${breakpoint})`}
             srcset={`/images/engagement-${i + 1}-d.jpg`}
