add open graph tags and image

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,6 +22,10 @@ const { title, description, bodyClass } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <meta name="theme-color" content="#344e41" />
+    <meta property="og:image" content="https://www.thekolenkos.com/og.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="preload" as="font" type="font/woff2" href={dmSans} crossorigin="anonymous" />
     <link rel="preload" as="font" type="font/woff2s" href={dmSerifText} crossorigin="anonymous" />
     <link rel="preload" as="font" type="font/woff2" href={playfair} crossorigin="anonymous" />
