fix title and description

--- a/src/pages/code.astro
+++ b/src/pages/code.astro
@@ -1,9 +1,12 @@
 ---
-import CodeForm from '@/components/react/CodeForm';
-import BaseLayout from '@/layouts/BaseLayout.astro';
+import CodeForm from "@/components/react/CodeForm";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="RSVP" description="Taylor and Josh's wedding RSVP page">
+<BaseLayout
+  title="The Kolenkos - Guest Access"
+  description="Enter the access code to view Taylor and Josh's wedding website"
+>
   <main>
     <div class="px-8 pt-20 pb-10 items-center text-center">
       <div class="w-full max-w-md mx-auto">
